===============================================================================
H323plus 1.26.6 - 1.26.x
===============================================================================
Added Allow implementers to supply thier own DH parameters for media encryption
NEW Add H.450.7 Support (WIP) (1.26.6)


===============================================================================
H323plus 1.26.0 - 1.26.5
===============================================================================
NEW Add H.323 Annex G T.140. Disabled by default (WIP)
BUG Full memory management audit with VLD (1.26.3)
NEW Support for different URI schema call routing
BUG DynamicPayloadType and MediaPacketization support in ExternalRTPChannel
BUG H.239 Support both presentation and live modes
BUG Better handle TCP connection timeout or non H.323 messages sent to listener port, 
NEW H323EndPoint::H46023NatMethodSelection to better co-ordinate when to use NAT method. 
BUG fixes to H.460.17 especially when using TLS transport. 
NEW AEC Implementation using fixed size ring buffer (1.26.2)
BUG correct possible memory corruption when creating silence frame
BUG ensure empty DH tokens are not created if not supported due to keylength setting
Added H323Connection::EnableCallMediaEncryption() is allow encryption to be disabled on a call-by-call basis
new switch H323_JITTER_ANALYSER and disabled jitter buffer logging by default.
BUG fixes for encyption support in H323_ExternalRTPChannel
Added H460.25 Location information support (req Expat support in PTLIB) (1.26.1)

===============================================================================
H323plus 1.25.0 - 1.25.5
===============================================================================
Added H323_MEDIAENCODED compile directive to support external media decode/encode
Added Encryption support to the H.224 Channel and H323_ExternalRTPChannel
Performance Memory management Improvement in audio/video processing.