@@ -2458,6 +2458,8 @@ class H323EndPoint : public PObject
     PBoolean TLS_SetCertificate(const PFilePath & certDir);
     PBoolean TLS_SetPrivateKey(const PFilePath & privFile, const PString & password);
     PBoolean TLS_SetCipherList(const PString & ciphers);
+    PBoolean TLS_SetDHParameters(const PFilePath & pkcs3);
+    PBoolean TLS_SetDHParameters(const PBYTEArray & dh_p, const PBYTEArray & dh_g);
     PBoolean TLS_Initialise(const PIPSocket::Address & binding = PIPSocket::GetDefaultIpAny(), 
                             WORD port = DefaultTLSPort);
     
